# report-tool-converter

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yaml
__test__/: index.spec.ts
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
resources/: .~lock.test_01.xlsx#  test_dropdown.xlsx  test_dropdown_expected.json  test_dropdown_output.xlsx  test_multiselect.xlsx  test_multiselect_expected.json  test_radio.xlsx  test_radio_expected.json  test_spec.xlsx  test_text.xlsx  test_text_expected.json  test_textarea.xlsx  test_textarea_expected.json  test_wrong_format.xlsx
src/: constants.rs  converter.rs  lib.rs
src/converter/: error.rs  field.rs  mod.rs  reader.rs  subject.rs  test.rs  writer.rs
src/converter/field/: mod.rs  subtypes.rs  validators.rs
