[package]
authors = ["Faisal Mahmood <faisal.arisaftech@gmail.com>"]
edition = "2018"
name = "report-tool-converter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2", features = ["serde-json", "serde", "napi7"] }
napi-derive = "2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
calamine = "0.18.0"
thiserror = "1.0.28"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
